--- a/web-security/web-security-shiro/src/main/resources/static/login.html
+++ b/web-security/web-security-shiro/src/main/resources/static/login.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>外部样式表</title>
+    <meta charset="utf-8"/>
+    <title>Shiro单点登录</title>
     <!--链接式:推荐使用-->
-    <link rel="stylesheet" type="text/css" href="/static/login.css" />
+    <link rel="stylesheet" type="text/css" href="/static/login.css"/>
 </head>
 <body>
 <div class="main">
